@@ -1,4 +1,4 @@
-package com.erp.formsmanagement.service.order;
+package com.erp.config.transliteration;
 
 import java.util.List;
 import org.springframework.stereotype.Service;
@@ -13,14 +13,11 @@ public class TransliterationService {
   }
 
   public String convertToHindi(String text) {
-
     Object response = client.transliterate(text, "hi-t-i0-und", 1);
-
     List<?> outerList = (List<?>) response;
     List<?> innerList = (List<?>) outerList.get(1);
-    List<?> wordData = (List<?>) innerList.get(0);
+    List<?> wordData = (List<?>) innerList.getFirst();
     List<?> suggestions = (List<?>) wordData.get(1);
-
-    return suggestions.get(0).toString();
+    return suggestions.getFirst().toString();
   }
 }
